cabal-version:      3.0
name:               Hades-Haskell-Clone
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple

common warnings
    ghc-options: -Wall

executable Hades-Haskell-Clone
    import:           warnings
    main-is:          Main.hs

    build-depends:    base ^>=4.18.3.0,
                      brillo,
                      random

    hs-source-dirs:   app
    default-language: GHC2021
